[project]
name = "analise-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.33.0",
    "seaborn>=0.13.2",
]
